# shrubs

./: .gitignore  README.md  pyproject.toml
docs/: trading-system.md
docs/plans/: 2026-02-01-pipeline-implementation.md  2026-02-01-trading-pipeline-design.md
scripts/: cron_nightly.sh  run_pipeline.py  simulate_history.py
src/shrubs/: __init__.py  cli.py  config.py
src/shrubs/backtest/: engine.py  signals.py
src/shrubs/data/: __init__.py  ib_client.py  polygon.py  store.py
src/shrubs/execution/: __init__.py  orders.py  portfolio.py
tests/: __init__.py  conftest.py
tests/integration/: test_ib_client.py  test_pipeline.py
tests/unit/: __init__.py  test_cli.py  test_engine.py  test_ib_client.py  test_orders.py  test_polygon.py  test_portfolio.py  test_signals.py  test_store.py
