[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shrubs"
version = "0.1.0"
description = "Algorithmic trading pipeline"
requires-python = ">=3.11"
dependencies = [
    "ib_insync>=0.9.86",
    "polygon-api-client>=1.13.0",
    "vectorbt>=0.26.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
shrubs = "shrubs.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/shrubs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (requires TWS/Gateway running)",
]
